--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend mentor challenge</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="section-grid">
@@ -29,12 +39,16 @@
               Olivier Polge, Perfumer-Creator <br />
               for the House of CHANEL.
             </p>
-            <div class="small amount">
-              <h3>$149.99</h3>
-              <p class="primary amount">$169.99</p>
+            <div class="small">
+              <h3 class="sec-amount">$149.99</h3>
+              <p class="primary-amount">$169.99</p>
             </div>
             <button class=".btn">
-              <img src="images/icon-cart.svg" alt="shopping cart" />
+              <img
+                src="images/icon-cart.svg"
+                alt="shopping cart"
+                class="icon"
+              />
               <h4>Add to Cart</h4>
             </button>
           </div>
