--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     <section class="section-grid">
       <div class="container">
         <div class="grid">
-          <img
+          <div class="img"></div>
+          <!-- <img
             src="images/image-product-desktop.jpg"
             alt="a bottle of perfume"
             class="product-image"
-          />
+          /> -->
           <div class="main-content">
             <p class="primary-heading">PERFUME</p>
             <h3>
